# simple-environment

./: .gitignore  Dockerfile  Makefile  README.md  notebook.ipynb  pyproject.toml
.github/workflows/: dockerhub.yml  ghcr.yml
extra/word_embeddings/: pyproject.toml
scripts/windows/: install_python_win.ps1
